--- a/assets/js/test.html
+++ b/assets/js/test.html
@@ -1,4 +1,4 @@
-// @require https://rawgit.com/cirept/QA_Toolbox/3.3.2-beta11/assets/js/dependencies/init.js
+// @require https://cdn.rawgit.com/cirept/QA_Toolbox/3.3.2-beta11/assets/js/dependencies/init.js
 // @require https://cdn.rawgit.com/cirept/QA_Toolbox/3.3.2-beta11/assets/js/dependencies/shared.js
 // @require https://cdn.rawgit.com/cirept/QA_Toolbox/3.3.2-beta11/assets/js/dependencies/qaToolbox.js
 // @require https://cdn.rawgit.com/cirept/QA_Toolbox/3.3.2-beta11/assets/js/dependencies/pageInformation.js
@@ -22,3 +22,29 @@
 // @require https://cdn.rawgit.com/cirept/QA_Toolbox/3.3.2-beta11/assets/js/dependencies/nextGenToggle.js
 // @require https://cdn.rawgit.com/cirept/QA_Toolbox/3.3.2-beta11/assets/js/dependencies/m4Check.js
 // @require https://cdn.rawgit.com/cirept/QA_Toolbox/3.3.2-beta11/assets/js/dependencies/dynamicDisplay.js
+
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/init.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/shared.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/qaToolbox.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/pageInformation.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/dealerName.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/webId.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/pageName.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/hTags.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/qaTools.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/imageChecker.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/linkChecker.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/spellCheck.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/speedTestPage.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/checkLinks.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/otherTools.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/showNavigation.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/seoSimplify.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/toggles.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/refreshPage.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/previewBarToggle.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/urlModifiers.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/nextGenToggle.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/m4Check.js
+// @require file://E:/GitHub/QA_Toolbox/assets/js/dependencies/dynamicDisplay.js
+// @resource toolStyles file://E:/GitHub/QA_Toolbox/assets/css/toolbox.css
